--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="no_internet_connection">No internet connection</string>
     <string name="no_data">There is no movie</string>
+    <string name="sectionMostPopular">Most popular movies</string>
+    <string name="sectionNew">New movies</string>
+    <string name="sectionMostVoted">Most voted movies</string>
     <string name="cat1">Action</string>
     <string name="cat2">Family</string>
     <string name="cat3">Comedy</string>
