--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="saved">Saved</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="sync_account_type">filmovarkaSync</string>
+    <string name="sync_changes">News in your saved movies</string>
 </resources>
