add manual sync button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="no">No</string>
     <string name="sync_account_type">filmovarkaSync</string>
     <string name="sync_changes">News in your saved movies</string>
+    <string name="refresh">Refresh</string>
+    <string name="request_sync">Syncing saved movies</string>
 </resources>
