--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">@string/app_name_n</string>
+    <string name="app_name">Filmovarka</string>
     <string name="navigation_drawer_head">Categories</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
